--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "avers-ng",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
+  "author": "Ivan Poleshchuk, Sergey Bakhmetiev",
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
+    "build": "ng build --prod",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -17,14 +19,20 @@
     "@angular/core": "2.2.1",
     "@angular/forms": "2.2.1",
     "@angular/http": "2.2.1",
-    "@angular/material": "^2.0.0-alpha.11-2",
+    "@angular/material": "latest",
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
-    "angularfire2": "^2.0.0-beta.6",
+    "@ngrx/core": "^1.0.0",
+    "@ngrx/db": "^2.0.0",
+    "@ngrx/effects": "^2.0.0",
+    "@ngrx/router-store": "^1.1.0",
+    "@ngrx/store": "^2.0.0",
+    "@ngrx/store-devtools": "^3.1.0",
     "core-js": "^2.4.1",
     "firebase": "^3.6.3",
-    "hammerjs": "^2.0.8",
+    "ngrx-store-freeze": "^0.1.0",
+    "reselect": "^2.5.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
