--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/core": "2.2.1",
     "@angular/forms": "2.2.1",
     "@angular/http": "2.2.1",
-    "@angular/material": "latest",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
@@ -29,6 +29,10 @@
     "@ngrx/router-store": "^1.1.0",
     "@ngrx/store": "^2.0.0",
     "@ngrx/store-devtools": "^3.1.0",
+    "@webcomponents/custom-elements": "^1.0.0-alpha.3",
+    "clarity-angular": "^0.8.0",
+    "clarity-icons": "^0.8.0",
+    "clarity-ui": "^0.8.0",
     "core-js": "^2.4.1",
     "firebase": "^3.6.3",
     "ngrx-store-freeze": "^0.1.0",
